Fix <br> having extra margin on FF

--- a/_stylesheets/_base.css
+++ b/_stylesheets/_base.css
@@ -88,6 +88,11 @@ svg {
   max-width: 100%;
 }
 
+br {
+  /* On FF, it takes in margin from "* + *" */
+  margin-top: 0;
+}
+
 .link,
 a {
   color: var(--color-link);
